# Tetris

./: .gitignore  CMakeLists.txt  ai.cpp  ai.h  common.cpp  common.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  mechanics.cpp  mechanics.h  piece_characteristics.cpp  piece_characteristics.h  piece_shapes.h  pieces.h  tetris.cbp
cmake/: FindSDL2.cmake
tetris.xcodeproj/: project.pbxproj
tetris.xcodeproj/project.xcworkspace/xcuserdata/mihneabuzoiu.xcuserdatad/: UserInterfaceState.xcuserstate
tetris.xcodeproj/xcuserdata/mihneabuzoiu.xcuserdatad/xcschemes/: xcschememanagement.plist
